# Interact

./: .buildinfo  .github  .gitignore  Introduction.html  LICENSE  README.md  base.html  examples.html  genindex.html  getting-started.html  handlers.html  index.html  objects.inv  py-modindex.html  pyproject.toml  retrieval.html  search.html  searchindex.js  similarity.html  utils.py
.doctrees/: environment.pickle  getting-started.doctree  handlers.doctree  index.doctree
.github/workflows/: deploy_docs.yml  tests.yml
_sources/: getting-started.rst.txt  index.rst.txt  similarity.rst.txt
_sources/examples_docs/: comapny_name_and_tagline.rst.txt  company_name_w_decorator.rst.txt  rag_example.rst.txt
docs/: .buildinfo  base.html  conf.py  genindex.html  getting-started.rst  handlers.html  handlers.rst  index.html  index.rst  introduction.html  introduction.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: base.doctree  environment.pickle  handlers.doctree  index.doctree  introduction.doctree
docs/_build/: .buildinfo  Introduction.html  base.html  genindex.html  handlers.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: Introduction.doctree  base.doctree  environment.pickle  handlers.doctree  index.doctree
examples/: cascade_as_list.py  comapny_name_and_tagline.py  company_name_w_decorator.py  handler_chain_uses.py  message_as_string.py  rag_example.py
examples_docs/: comapny_name_and_tagline.html  rag_example.html
interact/: __init__.py  agent.py  base.py  base2.py  exceptions.py  handlers.py  types.py  utils.py
interact/retrieval/: __init__.py  faiss.py  join_policies.py
interact/similarity/: __init__.py  faiss.py
sphinx/: conf.py
sphinx/_build/: base.html  genindex.html
src/: base.py  handlers.py
tests/: test_ensure_msg_info_is_propagated.py  test_examples.py  test_rag.py
(+45 files in other folders)
