[tool.poetry]
name = "interact"
version = "0.3.0"
description = "Interact with LLMs"
authors = ["Pritam Dey <pritam.pritamdey.984@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
python = "^3.10"
openai = "^1.12"

[tool.poetry.dev-dependencies]
sphinx = "^7.0"
sphinx-autobuild = "2021.3.14"
sphinx-rtd-theme = "1.3.0"
