[tool.poetry]
name = "interact"
version = "0.5.1"
description = "Interact with LLMs"
authors = ["Pritam Dey <pritam.pritamdey.984@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12"
pillow = "^10.0"
numpy = "^2.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^7.0"
sphinx-autobuild = "2021.3.14"
sphinx-rtd-theme = "1.3.0"
pytest = "^8.2"
python-dotenv = "*"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ""
testpaths = ["tests"]
